# MoZuku

.github/workflows/: ci.yml
mozuku-lsp/: CMakeLists.txt
mozuku-lsp/src/: analyzer.cpp  mecab_manager.cpp
patches/: cabocha_win_fix.patch
vscode-mozuku/: README.md
